--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,14 @@ cache:
   directories:
   - node_modules
 script:
-  - npm test
-  - npm run build
+  - yarn test
+  - yarn run build
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $github_token
+  local_dir: build
+  on:
+    branch: master
+    
