--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "redux-mock-store": "^1.5.3"
   },
   "main": "src/index.js",
-  "repository": "https://github.com/vshaddix/meal-planner-ui.git",
+  "homepage": "https://vshaddix.github.io/meal-planner-ui.git",
   "author": "Vasil Shaddix <vasilshaddixx@gmail.com>",
   "license": "MIT"
 }
