--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "react-scripts build",
     "test": "jest",
     "test:watch": "npm test -- --watch",
+    "test:coverage": "npm test -- --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
